

export interface Project {
  name: string,
  owner: string,
}
