@startuml

class User {
  userName: String
  name: String
  email: String
}

class Project {
  id: ObjectId
  owner: User
  name: String
}


class ModelicaFile {
  id: ObjectId
  projectID: ObjectId
  relativePath: Path
  content: Text
}

class Session {
  id: UUID
  project: Project
  user: User
  mopeEndpoint: Address
}

Project "1"--"*" ModelicaFile : has >
User "1"--"*" Project : owns >

@enduml
